fixes list tab for mobile and loading spinner spacing

--- a/static/css/mobile.less
+++ b/static/css/mobile.less
@@ -129,7 +129,7 @@ body {
     position: relative;
     padding: 0;
     height: 300px;
-    background-color: #EDEDED;
+    background-color: #ededed;
     border-top: solid 1px #d6d6d6;
     margin: -10px;
     margin-top: 10px;
@@ -140,7 +140,7 @@ body {
 
     .list-inner { border: solid 10px #ededed; }
 
-    .list-arrow { background-color: #e3e3e3; position:absolute; top: -37px; z-index:1000; width:35px; line-height: 35px; left:50%; margin-left:-15px; text-align:center;
+    .list-arrow { background-color: #ededed; position:absolute; top: -36px; z-index:1000; width:35px; line-height: 35px; left:50%; margin-left:-15px; text-align:center;
 
         border-left: solid 1px #d6d6d6;
         border-top: solid 1px #d6d6d6;
@@ -181,7 +181,7 @@ body {
 }
 
 .loading {
-    .loading-inner { padding: 10px; }
+    .loading-inner { padding: 0 10px 10px 10px; }
     img { width: 20px;}
 }
 
